source/src/parser/ATNParser.java
// $ANTLR 3.4 /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g 2015-04-10 17:55:36

package parser;
import interp.ATNTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * ATN interpreter grammar
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class ATNParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARC", "ARGLIST", "ARRAYLENGTH", "ASSIGN", "ATN", "BOOLEAN", "BRACKET", "COMMENT", "DEF", "DIV", "ELSE", "EQUAL", "ESC_SEQ", "FALSE", "FOR", "FUNCALL", "GE", "GT", "HASHBASE", "HASHCODE", "HASHEND", "HASHFORWARD", "HASHTEXT", "ID", "IF", "INT", "JUMP", "LE", "LIST_INSTR", "LT", "MINUS", "MOD", "MUL", "NODE", "NOT", "NOT_EQUAL", "OR", "PARAMS", "PLUS", "PREF", "PRINT", "PROGRAM", "PVALUE", "RETURN", "STRING", "TRUE", "WHILE", "WS", "'#.base'", "'#.code'", "'#.end()'", "'#.forward()'", "'#.text'", "'&'", "'('", "')'", "','", "'.length'", "';'", "']'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int AND=4;
    public static final int ARC=5;
    public static final int ARGLIST=6;
    public static final int ARRAYLENGTH=7;
    public static final int ASSIGN=8;
    public static final int ATN=9;
    public static final int BOOLEAN=10;
    public static final int BRACKET=11;
    public static final int COMMENT=12;
    public static final int DEF=13;
    public static final int DIV=14;
    public static final int ELSE=15;
    public static final int EQUAL=16;
    public static final int ESC_SEQ=17;
    public static final int FALSE=18;
    public static final int FOR=19;
    public static final int FUNCALL=20;
    public static final int GE=21;
    public static final int GT=22;
    public static final int HASHBASE=23;
    public static final int HASHCODE=24;
    public static final int HASHEND=25;
    public static final int HASHFORWARD=26;
    public static final int HASHTEXT=27;
    public static final int ID=28;
    public static final int IF=29;
    public static final int INT=30;
    public static final int JUMP=31;
    public static final int LE=32;
    public static final int LIST_INSTR=33;
    public static final int LT=34;
    public static final int MINUS=35;
    public static final int MOD=36;
    public static final int MUL=37;
    public static final int NODE=38;
    public static final int NOT=39;
    public static final int NOT_EQUAL=40;
    public static final int OR=41;
    public static final int PARAMS=42;
    public static final int PLUS=43;
    public static final int PREF=44;
    public static final int PRINT=45;
    public static final int PROGRAM=46;
    public static final int PVALUE=47;
    public static final int RETURN=48;
    public static final int STRING=49;
    public static final int TRUE=50;
    public static final int WHILE=51;
    public static final int WS=52;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ATNParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ATNParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ATNParser.tokenNames; }
    public String getGrammarFileName() { return "/home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:40:1: prog : ( utilities )+ EOF -> ^( PROGRAM ( utilities )+ ) ;
    public final ATNParser.prog_return prog() throws RecognitionException {
        ATNParser.prog_return retval = new ATNParser.prog_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        Token EOF2=null;
        ATNParser.utilities_return utilities1 =null;


        ATNTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_utilities=new RewriteRuleSubtreeStream(adaptor,"rule utilities");
        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:40:9: ( ( utilities )+ EOF -> ^( PROGRAM ( utilities )+ ) )
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:40:11: ( utilities )+ EOF
            {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:40:11: ( utilities )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ATN||LA1_0==DEF||LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:40:11: utilities
            	    {
            	    pushFollow(FOLLOW_utilities_in_prog223);
            	    utilities1=utilities();

            	    state._fsp--;

            	    stream_utilities.add(utilities1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog226);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: utilities
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (ATNTree)adaptor.nil();
            // 40:26: -> ^( PROGRAM ( utilities )+ )
            {
                // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:40:29: ^( PROGRAM ( utilities )+ )
                {
                ATNTree root_1 = (ATNTree)adaptor.nil();
                root_1 = (ATNTree)adaptor.becomeRoot(
                (ATNTree)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                if ( !(stream_utilities.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_utilities.hasNext() ) {
                    adaptor.addChild(root_1, stream_utilities.nextTree());

                }
                stream_utilities.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class utilities_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "utilities"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:44:1: utilities : ( DEF ^ ID params '{' ! block_instructions '}' !| ATN ^ ID '{' ! node_list '}' !| assign ';' !| funcall ';' !);
    public final ATNParser.utilities_return utilities() throws RecognitionException {
        ATNParser.utilities_return retval = new ATNParser.utilities_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        Token DEF3=null;
        Token ID4=null;
        Token char_literal6=null;
        Token char_literal8=null;
        Token ATN9=null;
        Token ID10=null;
        Token char_literal11=null;
        Token char_literal13=null;
        Token char_literal15=null;
        Token char_literal17=null;
        ATNParser.params_return params5 =null;

        ATNParser.block_instructions_return block_instructions7 =null;

        ATNParser.node_list_return node_list12 =null;

        ATNParser.assign_return assign14 =null;

        ATNParser.funcall_return funcall16 =null;


        ATNTree DEF3_tree=null;
        ATNTree ID4_tree=null;
        ATNTree char_literal6_tree=null;
        ATNTree char_literal8_tree=null;
        ATNTree ATN9_tree=null;
        ATNTree ID10_tree=null;
        ATNTree char_literal11_tree=null;
        ATNTree char_literal13_tree=null;
        ATNTree char_literal15_tree=null;
        ATNTree char_literal17_tree=null;

        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:44:13: ( DEF ^ ID params '{' ! block_instructions '}' !| ATN ^ ID '{' ! node_list '}' !| assign ';' !| funcall ';' !)
            int alt2=4;
            switch ( input.LA(1) ) {
            case DEF:
                {
                alt2=1;
                }
                break;
            case ATN:
                {
                alt2=2;
                }
                break;
            case ID:
                {
                int LA2_3 = input.LA(2);

                if ( (LA2_3==BRACKET||LA2_3==EQUAL||LA2_3==62) ) {
                    alt2=3;
                }
                else if ( (LA2_3==59) ) {
                    alt2=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;

                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:44:15: DEF ^ ID params '{' ! block_instructions '}' !
                    {
                    root_0 = (ATNTree)adaptor.nil();


                    DEF3=(Token)match(input,DEF,FOLLOW_DEF_in_utilities263); 
                    DEF3_tree = 
                    (ATNTree)adaptor.create(DEF3)
                    ;
                    root_0 = (ATNTree)adaptor.becomeRoot(DEF3_tree, root_0);


                    ID4=(Token)match(input,ID,FOLLOW_ID_in_utilities266); 
                    ID4_tree = 
                    (ATNTree)adaptor.create(ID4)
                    ;
                    adaptor.addChild(root_0, ID4_tree);


                    pushFollow(FOLLOW_params_in_utilities268);
                    params5=params();

                    state._fsp--;

                    adaptor.addChild(root_0, params5.getTree());

                    char_literal6=(Token)match(input,65,FOLLOW_65_in_utilities270); 

                    pushFollow(FOLLOW_block_instructions_in_utilities273);
                    block_instructions7=block_instructions();

                    state._fsp--;

                    adaptor.addChild(root_0, block_instructions7.getTree());

                    char_literal8=(Token)match(input,66,FOLLOW_66_in_utilities275); 

                    }
                    break;
                case 2 :
                    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:45:15: ATN ^ ID '{' ! node_list '}' !
                    {
                    root_0 = (ATNTree)adaptor.nil();


                    ATN9=(Token)match(input,ATN,FOLLOW_ATN_in_utilities292); 
                    ATN9_tree = 
                    (ATNTree)adaptor.create(ATN9)
                    ;
                    root_0 = (ATNTree)adaptor.becomeRoot(ATN9_tree, root_0);


                    ID10=(Token)match(input,ID,FOLLOW_ID_in_utilities295); 
                    ID10_tree = 
                    (ATNTree)adaptor.create(ID10)
                    ;
                    adaptor.addChild(root_0, ID10_tree);


                    char_literal11=(Token)match(input,65,FOLLOW_65_in_utilities297); 

                    pushFollow(FOLLOW_node_list_in_utilities300);
                    node_list12=node_list();

                    state._fsp--;

                    adaptor.addChild(root_0, node_list12.getTree());

                    char_literal13=(Token)match(input,66,FOLLOW_66_in_utilities302); 

                    }
                    break;
                case 3 :
                    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:46:15: assign ';' !
                    {
                    root_0 = (ATNTree)adaptor.nil();


                    pushFollow(FOLLOW_assign_in_utilities319);
                    assign14=assign();

                    state._fsp--;

                    adaptor.addChild(root_0, assign14.getTree());

                    char_literal15=(Token)match(input,63,FOLLOW_63_in_utilities321); 

                    }
                    break;
                case 4 :
                    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:47:6: funcall ';' !
                    {
                    root_0 = (ATNTree)adaptor.nil();


                    pushFollow(FOLLOW_funcall_in_utilities329);
                    funcall16=funcall();

                    state._fsp--;

                    adaptor.addChild(root_0, funcall16.getTree());

                    char_literal17=(Token)match(input,63,FOLLOW_63_in_utilities331); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "utilities"


    public static class node_list_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "node_list"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:50:1: node_list : node ( node )+ ;
    public final ATNParser.node_list_return node_list() throws RecognitionException {
        ATNParser.node_list_return retval = new ATNParser.node_list_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        ATNParser.node_return node18 =null;

        ATNParser.node_return node19 =null;



        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:50:13: ( node ( node )+ )
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:50:15: node ( node )+
            {
            root_0 = (ATNTree)adaptor.nil();


            pushFollow(FOLLOW_node_in_node_list355);
            node18=node();

            state._fsp--;

            adaptor.addChild(root_0, node18.getTree());

            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:50:20: ( node )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NODE) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:50:21: node
            	    {
            	    pushFollow(FOLLOW_node_in_node_list358);
            	    node19=node();

            	    state._fsp--;

            	    adaptor.addChild(root_0, node19.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "node_list"


    public static class node_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "node"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:53:1: node : NODE ^ ID '{' ! arc_list '}' !;
    public final ATNParser.node_return node() throws RecognitionException {
        ATNParser.node_return retval = new ATNParser.node_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        Token NODE20=null;
        Token ID21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        ATNParser.arc_list_return arc_list23 =null;


        ATNTree NODE20_tree=null;
        ATNTree ID21_tree=null;
        ATNTree char_literal22_tree=null;
        ATNTree char_literal24_tree=null;

        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:53:13: ( NODE ^ ID '{' ! arc_list '}' !)
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:53:15: NODE ^ ID '{' ! arc_list '}' !
            {
            root_0 = (ATNTree)adaptor.nil();


            NODE20=(Token)match(input,NODE,FOLLOW_NODE_in_node400); 
            NODE20_tree = 
            (ATNTree)adaptor.create(NODE20)
            ;
            root_0 = (ATNTree)adaptor.becomeRoot(NODE20_tree, root_0);


            ID21=(Token)match(input,ID,FOLLOW_ID_in_node403); 
            ID21_tree = 
            (ATNTree)adaptor.create(ID21)
            ;
            adaptor.addChild(root_0, ID21_tree);


            char_literal22=(Token)match(input,65,FOLLOW_65_in_node405); 

            pushFollow(FOLLOW_arc_list_in_node408);
            arc_list23=arc_list();

            state._fsp--;

            adaptor.addChild(root_0, arc_list23.getTree());

            char_literal24=(Token)match(input,66,FOLLOW_66_in_node410); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "node"


    public static class arc_list_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "arc_list"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:56:1: arc_list : arc ( arc )+ ;
    public final ATNParser.arc_list_return arc_list() throws RecognitionException {
        ATNParser.arc_list_return retval = new ATNParser.arc_list_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        ATNParser.arc_return arc25 =null;

        ATNParser.arc_return arc26 =null;



        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:56:13: ( arc ( arc )+ )
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:56:15: arc ( arc )+
            {
            root_0 = (ATNTree)adaptor.nil();


            pushFollow(FOLLOW_arc_in_arc_list435);
            arc25=arc();

            state._fsp--;

            adaptor.addChild(root_0, arc25.getTree());

            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:56:19: ( arc )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ARC) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:56:20: arc
            	    {
            	    pushFollow(FOLLOW_arc_in_arc_list438);
            	    arc26=arc();

            	    state._fsp--;

            	    adaptor.addChild(root_0, arc26.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "arc_list"


    public static class arc_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "arc"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:59:1: arc : ARC ^ '(' expr ')' ! instructions ;
    public final ATNParser.arc_return arc() throws RecognitionException {
        ATNParser.arc_return retval = new ATNParser.arc_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        Token ARC27=null;
        Token char_literal28=null;
        Token char_literal30=null;
        ATNParser.expr_return expr29 =null;

        ATNParser.instructions_return instructions31 =null;


        ATNTree ARC27_tree=null;
        ATNTree char_literal28_tree=null;
        ATNTree char_literal30_tree=null;

        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:59:12: ( ARC ^ '(' expr ')' ! instructions )
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:59:14: ARC ^ '(' expr ')' ! instructions
            {
            root_0 = (ATNTree)adaptor.nil();


            ARC27=(Token)match(input,ARC,FOLLOW_ARC_in_arc469); 
            ARC27_tree = 
            (ATNTree)adaptor.create(ARC27)
            ;
            root_0 = (ATNTree)adaptor.becomeRoot(ARC27_tree, root_0);


            char_literal28=(Token)match(input,59,FOLLOW_59_in_arc472); 
            char_literal28_tree = 
            (ATNTree)adaptor.create(char_literal28)
            ;
            adaptor.addChild(root_0, char_literal28_tree);


            pushFollow(FOLLOW_expr_in_arc474);
            expr29=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr29.getTree());

            char_literal30=(Token)match(input,60,FOLLOW_60_in_arc476); 

            pushFollow(FOLLOW_instructions_in_arc479);
            instructions31=instructions();

            state._fsp--;

            adaptor.addChild(root_0, instructions31.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "arc"


    public static class params_return extends ParserRuleReturnScope {
        ATNTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:1: params : '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) ;
    public final ATNParser.params_return params() throws RecognitionException {
        ATNParser.params_return retval = new ATNParser.params_return();
        retval.start = input.LT(1);


        ATNTree root_0 = null;

        Token char_literal32=null;
        Token char_literal34=null;
        ATNParser.paramlist_return paramlist33 =null;


        ATNTree char_literal32_tree=null;
        ATNTree char_literal34_tree=null;
        RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
        RewriteRuleTokenStream stream_60=new RewriteRuleTokenStream(adaptor,"token 60");
        RewriteRuleSubtreeStream stream_paramlist=new RewriteRuleSubtreeStream(adaptor,"rule paramlist");
        try {
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:9: ( '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) )
            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:11: '(' ( paramlist )? ')'
            {
            char_literal32=(Token)match(input,59,FOLLOW_59_in_params508);  
            stream_59.add(char_literal32);


            // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:15: ( paramlist )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||LA5_0==58) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:15: paramlist
                    {
                    pushFollow(FOLLOW_paramlist_in_params510);
                    paramlist33=paramlist();

                    state._fsp--;

                    stream_paramlist.add(paramlist33.getTree());

                    }
                    break;

            }


            char_literal34=(Token)match(input,60,FOLLOW_60_in_params513);  
            stream_60.add(char_literal34);


            // AST REWRITE
            // elements: paramlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (ATNTree)adaptor.nil();
            // 63:30: -> ^( PARAMS ( paramlist )? )
            {
                // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:33: ^( PARAMS ( paramlist )? )
                {
                ATNTree root_1 = (ATNTree)adaptor.nil();
                root_1 = (ATNTree)adaptor.becomeRoot(
                (ATNTree)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                // /home2/users/alumnes/1171575/dades/linux/CL/atnlang/source/src/parser/ATN.g:63:42: ( paramlist )?
                if ( stream_paramlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramlist.nextTree());

                }
                stream_paramlist.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (ATNTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ATNTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
